version/0.12/_sources/api/solver/_autosummary/settings/limits.rst.txt
:orphan:

.. _limits:

limits
======

.. currentmodule:: ansys.fluent.core.solver.settings_231.limits

.. autoclass:: limits
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

================================================================   ============================================================

Child                                                                                                                   Summary

================================================================   ============================================================
:ref:`min_pressure <min_pressure>`                                           Minimum vapor pressure limit for cavitation model.

:ref:`max_pressure <max_pressure>`                                                     Set maximum allowable absolute pressure.

:ref:`min_temperature <min_temperature>`                                                     Set minimum allowable temperature.

:ref:`max_temperature <max_temperature>`                                                     Set maximum allowable temperature.

:ref:`min_tke <min_tke>`                                                                               Set minimum allowable k.

:ref:`min_lam_tke <min_lam_tke>`                                                                      Set minimum allowable k1.

:ref:`min_des_tke <min_des_tke>`                                                                       Set minimum allowable k.

:ref:`min_epsilon <min_epsilon>`                                                                 Set minimum allowable epsilon.

:ref:`min_des_epsilon <min_des_epsilon>`                                                         Set minimum allowable epsilon.

:ref:`min_v2f_tke <min_v2f_tke>`                                                                       Set minimum allowable k.

:ref:`min_v2f_epsilon <min_v2f_epsilon>`                                                         Set minimum allowable epsilon.

:ref:`min_vel_var_scale <min_vel_var_scale>`                                                          Set minimum allowable v2.

:ref:`min_elliptic_relax_func <min_elliptic_relax_func>`                                               Set minimum allowable f.

:ref:`min_omega <min_omega>`                                                                       Set minimum allowable omega.

:ref:`min_des_omega <min_des_omega>`                                                               Set minimum allowable omega.

:ref:`max_turb_visc_ratio <max_turb_visc_ratio>`                       Set maximum allowable turbulent/laminar viscosity ratio.

:ref:`positivity_rate <positivity_rate>`                                                             Set positivity Rate Limit.

:ref:`min_vol_frac_for_matrix_sol <min_vol_frac_for_matrix_sol>`                    Set Minimum Vol. Frac. for Matrix Solution.

================================================================   ============================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`controls <controls>`       'controls' child.

==========================   =====================

